--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-loading-skeleton": "^3.0.3",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
